<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LayoutHelp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dip"
            android:text="@string/update"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="350dip" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/instruction"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/title"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/titleUpdate"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:textColor="#000000"
                    android:paddingRight="5dip" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_margin="10dip" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="@string/content"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/contentUpdate"
                    android:layout_width="150dip"
                    android:layout_height="100dp"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:lines="5"
                    android:paddingRight="5dip"
                    android:textColor="#000000"
                    android:singleLine="false" >
                </EditText>
            </LinearLayout>

            <TextView
                android:id="@+id/healthbenefittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:background="#FFFFFF"
                android:paddingLeft="5dip"
                android:textColor="#000000"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tags"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/tagsUpdate"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:textColor="#000000"
                    android:paddingRight="5dip" >
                </EditText>
            </LinearLayout>

            <TextView
                android:id="@+id/exeriserecommondationtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:background="#FFFFFF"
                android:paddingLeft="5dip"
                android:textColor="#000000"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/status"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/statusSpinnerUpdate"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:drawSelectorOnTop="true"
                    android:paddingRight="5dip"
                    android:prompt="@string/spinner_status_color_prompt" />
            </LinearLayout>

            <TextView
                android:id="@+id/tipstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:background="#FFFFFF"
                android:paddingLeft="5dip"
                android:textColor="#000000"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip" >

                <Button
                    android:id="@+id/updateButton"
                    android:layout_width="157dp"
                    android:layout_height="50dip"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onClickUpdate"
                    android:text="@string/updateButton" />

                <Button
                    android:id="@+id/homeButton"
                    android:layout_width="157dp"
                    android:layout_height="50dip"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onClickHome"
                    android:text="@string/home" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>