<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10dip" >
    <!-- android:background="#DDDDDD" --> 

    <TextView
        android:id="@+id/tv_un"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="9dip"
        android:layout_marginTop="20dip"
        android:text="@string/username"
        android:textColor="#444444"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_un"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="9dip"
        android:layout_marginTop="15dip"
        android:text="@string/password"
        android:textColor="#444444"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_pw"
        android:layout_marginLeft="17dip"
        android:layout_toRightOf="@id/tv_pw"
        android:inputType="textPassword"
        android:background="@android:drawable/editbox_background"
        android:password="true" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/et_pw"
        android:layout_marginLeft="110dip"
        android:layout_marginTop="15dip"
        android:text="@string/login" 
        android:onClick="onClickLogin" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btn_login"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="9dip"
        android:layout_marginTop="15dip"
        android:text=""
        android:textColor="#AA0000"
        android:textSize="7pt" />

    <EditText
        android:id="@+id/et_un"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_un"
        android:layout_alignBottom="@+id/tv_un"
        android:layout_alignLeft="@+id/et_pw"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:background="@android:drawable/editbox_background" >
    </EditText>

</RelativeLayout>
